[project]
name = "pyfolioanalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cvxopt>=1.3.3",
    "cvxpy>=1.8.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyscipopt>=6.1.0",
    "riskfolio-lib>=7.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "yfinance>=1.2.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
