[project]
name = "pyfolioanalytics"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "clarabel>=0.11.1",
    "cvxopt>=1.3.3",
    "cvxpy>=1.8.2",
    "highspy>=1.14.0",
    "kaleido>=1.2.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyscipopt>=6.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = [
    "src/pyfolioanalytics/dbht.py",
    "third_party/**",
    "GEMINI.md",
    "data/**",
    "scripts/**"
]

[dependency-groups]
dev = [
    "pyportfolioopt>=1.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "akshare>=1.18.55",
    "ty>=0.0.31",
    "yfinance>=1.2.2",
    "riskfolio-lib>=7.2.1",
    "kaleido>=1.2.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["third_party", ".*", "cvxopt", "cvxpy", "numpy", "pandas", "pyscipopt", "riskfolio-lib", "scikit-learn", "scipy", "yfinance"]
addopts = "-v"

[tool.ty.src]
include = ["src", "tests"]
exclude = [
    "src/pyfolioanalytics/dbht.py",
]

